--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </div>
 
   <script>
-    const API_URL = "https://file-converter-backend-0tg6.onrender.com/uploads";
+    const API_URL = "https://file-converter-backend-0tg6.onrender.com/convert";
 
   function login() {
     const user = document.getElementById('username').value;
