--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <script>
    
-const API_URL = "https://file-converter-backend-0tg6.onrender.com/uploads";
+const API_URL = "https://file-converter-backend-0tg6.onrender.com/convert";
 
 function login() {
   const user = document.getElementById('username').value;
