--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
     <select id="format">
       <option value="txt">Convert to TXT</option>
       <option value="json">Convert to JSON</option>
+      <option value="txt_to_pdf">TXT → PDF</option>
+      <option value="txt_to_docx">TXT → DOCX</option>
+      <option value="pdf_to_txt">PDF → TXT</option>
+      <option value="docx_to_txt">DOCX → TXT</option>
+      <option value="pdf_to_docx">PDF → DOCX</option>
     </select>
     <button id="convertBtn" onclick="convertFile()">Convert</button>
      <p id="status" class="note"></p>
