--- a/index.html
+++ b/index.html
@@ -67,8 +67,14 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-
   </style>
+  
+  <script>
+    if (localStorage.getItem("loggedIn") === "true") {
+      document.getElementById("loginCard").classList.remove("active");
+      document.getElementById("converterCard").classList.add("active");
+    }
+  </script>
 </head>
 <body>
 
@@ -77,6 +83,7 @@
     <h2>Login</h2>
     <input type="text" id="username" placeholder="Username" />
     <input type="password" id="password" placeholder="Password" />
+    <button onclick="register()">Register</button>
     <button onclick="login()">Login</button>
     
   </div>
@@ -98,18 +105,65 @@
   </div>
 
   <script>
-   
 const API_URL = "https://file-converter-backend-0tg6.onrender.com/convert";
+const REGISTER_API = "https://file-converter-backend-0tg6.onrender.com/register";
+const LOGIN_API = "https://file-converter-backend-0tg6.onrender.com/login";
+const extMap = {
+  txt_to_pdf: "pdf",
+  txt_to_docx: "docx",
+  pdf_to_txt: "txt",
+  docx_to_txt: "txt",
+  pdf_to_docx: "docx"
+};
 
-function login() {
-  const user = document.getElementById('username').value;
-  const pass = document.getElementById('password').value;
+async function login() {
+  const user = document.getElementById("username").value.trim();
+  const pass = document.getElementById("password").value.trim();
 
-  if (user && pass) {
-    document.getElementById('loginCard').classList.remove('active');
-    document.getElementById('converterCard').classList.add('active');
-  } else {
-    alert('Please enter username and password');
+  if (!user || !pass) {
+    alert("Enter username and password");
+    return;
+  }
+  try {
+    const res = await fetch(LOGIN_API, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ username: user, password: pass })
+    });
+    const data = await res.json();
+    if (!res.ok) throw new Error(data.message);
+    localStorage.setItem("loggedIn", "true");
+    document.getElementById("loginCard").classList.remove("active");
+    document.getElementById("converterCard").classList.add("active");
+  } catch (err) {
+    alert("Login failed: " + err.message);
+  }
+}
+
+async function register() {
+  const user = document.getElementById("username").value.trim();
+  const pass = document.getElementById("password").value.trim();
+
+  if (!user || !pass) {
+    alert("Enter username and password");
+    return;
+  }
+
+  try {
+    const res = await fetch(REGISTER_API, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ username: user, password: pass })
+    });
+
+    const data = await res.json();
+
+    if (!res.ok) throw new Error(data.message);
+
+    alert("Registration successful. Please login.");
+
+  } catch (err) {
+    alert("Registration failed: " + err.message);
   }
 }
 
@@ -123,6 +177,7 @@ async function convertFile() {
   }
 
   const file = fileInput.files[0];
+  const originalName = file.name.split(".").slice(0, -1).join(".");
 
   // ✅ 2. File validation
   const allowedTypes = [
@@ -175,7 +230,7 @@ async function convertFile() {
 
     const a = document.createElement("a");
     a.href = url;
-    a.download = "converted." + format;
+    a.download = `${originalName}_converted.${extMap[format]}`;
     document.body.appendChild(a);
     a.click();
     a.remove();
