--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
       <option value="pdf_to_docx">PDF → DOCX</option>
     </select>
     <button id="convertBtn" onclick="convertFile()">Convert</button>
-     <div id="status" class="note"></div>
+    <button onclick="logout()">Logout</button>
+    <div id="status" class="note"></div>
     
   </div>
 
@@ -158,6 +159,7 @@ async function login() {
       body: JSON.stringify({ username: user, password: pass })
     });
     const data = await res.json();
+    localStorage.setItem("token", data.token);
     if (!res.ok) throw new Error(data.message);
     
     document.getElementById("loginCard").classList.remove("active");
@@ -192,6 +194,23 @@ async function register() {
   } catch (err) {
     alert("Registration failed: " + err.message);
   }
+}
+
+// 🚪 STEP 3.3: Logout
+function logout() {
+  localStorage.removeItem("token");
+  localStorage.removeItem("loggedIn");
+
+  document.getElementById("converterCard").classList.remove("active");
+  document.getElementById("registerCard").classList.remove("active");
+  document.getElementById("loginCard").classList.add("active");
+}
+
+//session check before conversion
+if (!localStorage.getItem("token")) {
+  alert("Session expired. Please login again.");
+  logout();
+  return;
 }
 
 async function convertFile() {
@@ -242,8 +261,12 @@ async function convertFile() {
   formData.append("format", format);
 
   try {
+    const token = localStorage.getItem("token");
     const response = await fetch(API_URL, {
       method: "POST",
+      headers: {
+    "Authorization": "Bearer " + token
+     },
       body: formData
     });
 
