--- a/index.html
+++ b/index.html
@@ -202,6 +202,18 @@ body.dark #logoutBtn {
   background: #b91c1c;
 }
 
+/* 📁 File input resized & aligned */
+input[type="file"] {
+  width: 100%;
+  height: 42px;                 
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  background: #f9fafb;
+  font-size: 14px;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
   </style>
 </head>
 <body>
